@@ -55,7 +55,7 @@ export(add.scope, add1, addmargins, aggregate, aggregate.data.frame,
        rmultinom, rnbinom, rnorm, rpois, rsignrank, rstandard,
        rstandard.glm, rstandard.lm, rstudent, rstudent.glm,
        rstudent.lm, rt, runif, rweibull, rwilcox, sd, se.contrast,
-       simulate, spline, splinefun, SSD, start, stat.anova, step,
+       simulate, spline, splinefun, splinefunH, SSD, start, stat.anova, step,
        summary.aov, summary.aovlist, summary.glm, summary.infl,
        summary.lm, summary.manova, summary.mlm, symnum, termplot,
        terms, terms.aovlist, terms.default, terms.formula,
